// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWrapper renders correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="pf-v5-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF5/TableRow"
        data-ouia-safe="true"
      />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`RowWrapper renders expanded correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF5/TableRow"
        data-ouia-safe="true"
      />
    </tbody>
  </table>
</DocumentFragment>
`;
